# netavark

./: .cirrus.yml  .gitignore  .packit-copr-rpm.sh  .packit.sh  .packit.yaml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_RUST.md  Cargo.toml  DISTRO_PACKAGE.md  Makefile  OWNERS  README.md  RELEASE_NOTES.md  SECURITY.md  build.rs  netavark.spec.rpkg  perf-netavark.sh  plugin-API.md
.autocopr/: README  netavark.spec
.cargo/: config.toml
.github/: lintje.txt  renovate.json5
.github/workflows/: check_cirrus_cron.yml  commit_lint.yml  release.yml  rerun_cirrus_cron.yml
contrib/: Dockerfile
contrib/cirrus/: cache_groom.sh  lib.sh  runner.sh  setup.sh
contrib/container_images/: Dockerfile.CentOS9  Dockerfile.Fedora  Dockerfile.Rust  Dockerfile.UbuntuLatest  Dockerfile.f36  README.md  build_and_publish_rust_image.sh
contrib/packit-tmt/: update-deps.sh
contrib/systemd/system/: netavark-dhcp-proxy.service  netavark-dhcp-proxy.service.in  netavark-dhcp-proxy.socket  netavark-firewalld-reload.service.in  netavark-nftables-reload.service.in
docs/: Makefile  generate-code-coverage-report.md  netavark-create-input.md  netavark-dhcp-proxy.md  netavark-firewalld.7.md  netavark.1.md  publish-crate.md
examples/: error-plugin.rs  host-device-plugin.rs  stderr-plugin.rs
hack/: get_ci_vm.sh  tree_status.sh
plans/: main.fmf
rpm/: gating.yaml  netavark.spec  update-spec-provides.sh
src/: error.rs  lib.rs  main.rs  plugin.rs  serialize.rs
src/commands/: create.rs  dhcp_proxy.rs  firewall_reload.rs  firewalld_reload.rs  mod.rs  nftables_reload.rs  setup.rs  teardown.rs  update.rs  version.rs
src/dhcp_proxy/: cache.rs  dhcp_service.rs  ip.rs  lib.rs  mod.rs  proxy_conf.rs  server.rs  types.rs
src/dhcp_proxy_client/: client.rs
src/dhcp_proxy_client/commands/: mod.rs  setup.rs  teardown.rs
src/dhcp_proxy_server/: server.rs
src/dns/: aardvark.rs  mod.rs
src/error/: mod.rs
src/firewall/: firewalld.rs  fwnone.rs  iptables.rs  mod.rs  nft.rs  state.rs
src/firewall/varktables/: helpers.rs  mod.rs  types.rs
src/ipam/: mod.rs  store.rs  util.rs
src/network/: adapter.rs  bridge.rs  constants.rs  core.rs  core_utils.rs  dhcp.rs  driver.rs  internal_types.rs  macvlan.rs  macvlan_dhcp.rs  mod.rs  netlink.rs  netlink_netfilter.rs  netlink_route.rs  network.rs  plugin.rs  sysctl.rs  types.rs  validation.rs  vlan.rs  wireguard.rs
src/network/create_config/: config.rs  driver.rs  mod.rs  subnet.rs  validation.rs
src/proto/: proxy.proto
src/test/: main.rs  mod.rs  netlink.rs  test.rs
src/test/config/: ipv6_dual.json  portmapping.json  setupopts.test.json  setupopts2.test.json  setupoptsmacvlan.test.json  twoNetworks-array.json  twoNetworks-map.json
test/: 001-basic.bats  100-bridge-iptables.bats  200-bridge-firewalld.bats  250-bridge-nftables.bats  300-macvlan.bats  400-ipvlan.bats  400-wireguard.bats  500-bridge-fwnone.bats  500-plugin.bats  600-bridge-vrf.bats  610-bridge-vethname.bats  620-bridge-mode.bats  630-bridge-vlan.bats  640-bridge-mtu.bats  700-create.bats  700-udp-traffic-flush.bats  README.md  helpers.bash
test-dhcp/: 001-basic.bats  002-setup.bats  003-teardown.bats  004-server.bats  005-renew.bats  README-manual_test.md  README.md  helpers.bash  setup.sh
test-dhcp/configfiles/: bad_interface.json  bad_mac.json  basic.json  no_mac.json
test-dhcp/dnsmasqfiles/: sample.conf
test-dhcp/tmt/: integration.fmf  integration.sh
test/testfiles/: bridge-blackholeroutes.json  bridge-managed-dhcp.json  bridge-managed.json  bridge-mtu.json  bridge-nodefaultroute.json  bridge-nogateway.json  bridge-outbound-addr.json  bridge-outbound-addr4.json  bridge-outbound-addr6.json  bridge-port-hostip.json  bridge-port-tcp-udp.json  bridge-staticroutes.json  bridge-udp-stale-conntrack-range.json  bridge-udp-stale-conntrack.json  bridge-unmanaged-dns.json  bridge-unmanaged-vlan-dhcp.json  bridge-unmanaged.json  bridge-vethname-exists.json  bridge-vethname.json  connectbridge.json  dns-invalid-names.json  dns-names.json  dualstack-bridge-custom-dns-server.json  dualstack-bridge-multiple-custom-dns-server.json  dualstack-bridge-network-container-dns-server.json  dualstack-bridge.json  firewalld-dbus.conf  internal.json  invalid-port.json  ipv6-bridge-blackholeroutes.json  ipv6-bridge-staticroutes.json  ipv6-bridge.json  ipvlan-duplicate-subnet.json  ipvlan-internal.json  ipvlan-mtu.json  ipvlan-multiple-ips.json  ipvlan-multiple-subnets.json  ipvlan-nodefaultroute.json  ipvlan-nogateway.json  ipvlan-overlapping-subnets.json  (+23 more)
test/testfiles/create/: basic.json  bridge.json  check-used-subnets-with-subnet.json  dns-enabled.json  duplicate-name-same.json  empty-id.json  empty-name.json  explicit-subnet.json  gateway-not-in-subnet.json  internal.json  invalid-name.json  ipam-none-with-subnets.json  ipam-none.json  ipv6-auto-dualstack.json  ipv6-enabled.json  ipv6-subnet.json  ipv6-with-ipv4-subnet.json  ipvlan-invalid-parent.json  ipvlan-no-subnet.json  ipvlan-subnet.json  isolate-strict.json  isolate-true.json  labels.json  lease-range-both.json  lease-range-invalid.json  lease-range-start.json  macvlan-dhcp.json  macvlan-invalid-parent.json  macvlan-mode.json  macvlan-subnet.json  mtu-invalid.json  mtu-option.json  network-dns-servers-dns-disabled.json  network-dns-servers-invalid-ip.json  network-dns-servers-valid.json  options.json  route-invalid-dest.json  route-invalid-gw.json  routes-blackhole-with-gateway.json  routes-blackhole.json  (+12 more)
test/testfiles/wireguard/: wireguard-fail-address-empty.conf  wireguard-fail-address-empty.json  wireguard-fail-address-missing.conf  wireguard-fail-address-missing.json  wireguard-fail-allowedips-empty.conf  wireguard-fail-allowedips-empty.json  wireguard-fail-allowedips-missing.conf  wireguard-fail-allowedips-missing.json  wireguard-fail-broken-line.conf  wireguard-fail-broken-line.json  wireguard-fail-endpoint-empty.conf  wireguard-fail-endpoint-empty.json  wireguard-fail-endpoint-hostname.conf  wireguard-fail-endpoint-hostname.json  (+30 more)
test/tmt/: integration.sh  main.fmf  netavark.fmf  podman.fmf  test_integration.sh
