[package]
name = "netavark"
version = "1.16.0-dev"
edition = "2021"
authors = ["github.com/containers"]
license = "Apache-2.0"
readme = "README.md"
description = "A container network stack"
homepage = "https://github.com/containers/netavark"
repository = "https://github.com/containers/netavark"
categories = ["virtualization"]
exclude = ["/.cirrus.yml", "/.github/*", "/hack/*"]
build = "build.rs"
rust-version = "1.77"

[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-*"]
tier = "2"

[[bin]]
name = "netavark"
path = "src/main.rs"

[[bin]]
name = "netavark-dhcp-proxy-client"
path = "src/dhcp_proxy_client/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
clap = { version = "~4.5.37", features = ["derive", "env"] }
env_logger = "0.11.8"
ipnet = { version = "2.11.0", features = ["serde"] }
iptables = "0.5.2"
libc = "0.2.157"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysctl = "0.6.0"
zbus = { version = "5.7.1" }
nix = { version = "0.30.1", features = ["sched", "signal", "user"] }
rand = "0.9.1"
sha2 = "0.10.9"
netlink-packet-route = "0.23.0"
netlink-packet-core = "0.7.0"
netlink-sys = "0.8.7"
nftables = "0.6.2"
fs2 = "0.4.3"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "signal", "fs"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.13.1"
mozim = "0.2.5"
prost = "0.13.5"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
tower = { version = "0.5.2", features = ["util"] }
hyper-util = "0.1.13"

[build-dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
tonic-build = "0.13.1"

[dev-dependencies]
once_cell = "1.21.3"
rand = "0.9.1"
tempfile = "3.20.0"
