[package]
name = "netavark"
version = "2.0.0-dev"
edition = "2021"
authors = ["github.com/containers"]
license = "Apache-2.0"
readme = "README.md"
description = "A container network stack"
homepage = "https://github.com/containers/netavark"
repository = "https://github.com/containers/netavark"
categories = ["virtualization"]
exclude = ["/.cirrus.yml", "/.github/*", "/hack/*"]
build = "build.rs"
rust-version = "1.86"

[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-*"]
tier = "2"

[[bin]]
name = "netavark"
path = "src/main.rs"


# Only used for testing, do not ship to end users.
[[bin]]
name = "netavark-dhcp-proxy-client"
path = "src/dhcp_proxy_client/client.rs"

[[bin]]
name = "netavark-connection-tester"
path = "src/test/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
clap = { version = "~4.5.51", features = ["derive", "env"] }
env_logger = "0.11.8"
ipnet = { version = "2.11.0", features = ["serde"] }
iptables = "0.6.0"
libc = "0.2.157"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zbus = { version = "5.12.0" }
nix = { version = "0.30.1", features = ["net", "sched", "signal", "socket", "user"] }
rand = "0.9.2"
sha2 = "0.10.9"
netlink-packet-route = "0.25.1"
netlink-packet-netfilter = { git = "https://github.com/shivkr6/netlink-packet-netfilter.git", branch = "conntrack-new" }
netlink-packet-core = "0.8.1"
netlink-sys = "0.8.7"
nftables = "0.6.3"
fs2 = "0.4.3"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "signal", "fs", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
mozim = "0.3.0"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
tower = { version = "0.5.2", features = ["util"] }
hyper-util = "0.1.18"

[build-dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
tonic-prost-build = "0.14.2"

[dev-dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
tempfile = "3.23.0"
