[package]
name = "netavark"
version = "2.0.0-dev"
edition = "2021"
authors = ["github.com/containers"]
license = "Apache-2.0"
readme = "README.md"
description = "A container network stack"
homepage = "https://github.com/containers/netavark"
repository = "https://github.com/containers/netavark"
categories = ["virtualization"]
exclude = ["/.cirrus.yml", "/.github/*", "/hack/*"]
build = "build.rs"
rust-version = "1.86"

[package.metadata.vendor-filter]
platforms = ["*-unknown-linux-*"]
tier = "2"

[[bin]]
name = "netavark"
path = "src/main.rs"


# Only used for testing, do not ship to end users.
[[bin]]
name = "netavark-dhcp-proxy-client"
path = "src/dhcp_proxy_client/client.rs"

[[bin]]
name = "netavark-connection-tester"
path = "src/test/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
clap = { version = "~4.5.53", features = ["derive", "env"] }
env_logger = "0.11.9"
ipnet = { version = "2.11.0", features = ["serde"] }
libc = "0.2.157"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
zbus = { version = "5.13.1" }
nix = { version = "0.30.1", features = ["net", "sched", "signal", "socket", "user"] }
rand = "0.9.2"
sha2 = "0.10.9"
netlink-packet-route = "0.29.0"
netlink-packet-core = "0.8.1"
netlink-sys = "0.8.8"
nftables = "0.6.3"
fs2 = "0.4.3"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "signal", "fs", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.4"
tonic-prost = "0.14.4"
prost = "0.14.3"
mozim = { version = "0.3.1", default-features = false }
futures-channel = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
tower = { version = "0.5.3", features = ["util"] }
hyper-util = "0.1.20"

[build-dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
tonic-prost-build = "0.14.4"

[dev-dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
tempfile = "3.25.0"
